--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<article class="page">
-
+<article class="page page-content">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
