--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,11 +46,11 @@
             <nav class="main-nav" role="navigation">
               <a href="{{ site.baseurl }}/" {% if page.url == "/" %}class="active"{% endif %}>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 4px;"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                អត្ថបទ
+                Articles
               </a>
               <a href="{{ site.baseurl }}/about" {% if page.url == "/about/" %}class="active"{% endif %}>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 4px;"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-                អំពី​ខ្ញុំ
+                About
               </a>
             </nav>
 
