--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,7 @@ layout: default
             <line x1="19" y1="12" x2="5" y2="12"></line>
             <polyline points="12 19 5 12 12 5"></polyline>
           </svg>
-          មុន
+          Previous
         </span>
         <span class="post-nav-title">
           {% assign prev_title_parts = page.previous.title | split: ']' %}
@@ -77,7 +77,7 @@ layout: default
       {% if page.next.url %}
       <a href="{{ site.baseurl }}{{ page.next.url }}" class="post-nav-item next">
         <span class="post-nav-label">
-          បន្ទាប់
+          Next
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 4px;">
             <line x1="5" y1="12" x2="19" y2="12"></line>
             <polyline points="12 5 19 12 12 19"></polyline>
