--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
 
+    <!-- Plotly.js for interactive graphs -->
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
+
     <!-- Theme initialization (prevent flash) -->
     <script>
       (function() {
