--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
 
   {% include meta.html %}
+  {% include mermaid.html %}
+
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
