--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -182,7 +182,7 @@
 
         <!-- Copyright -->
         <p class="footer-copyright">
-          &copy; {{ site.time | date: '%Y' }} {{ site.name }}. Built with Jekyll.
+          &copy; {{ site.time | date: '%Y' }} {{ site.name }}.
         </p>
       </div>
     </div>
