--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -114,3 +114,6 @@ document.addEventListener('DOMContentLoaded', function() {
   updateProgress();
 });
 </script>
+
+
+{% include article-animations.html %}
