--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,4 @@
----
----
+--- --- //
 // IMPORTS
 //
 
@@ -1907,4 +1906,3 @@ table {
 // Import syntax highlighting
 @import "highlights";
 @import "svg-icons";
-
