--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,92 +1,2 @@
-// Syntax Highlighting with Dark Mode Support
-
-.highlight {
-  background-color: var(--code-bg);
-  padding: 1rem 1.25rem;
-  border: 1px solid var(--border-color);
-  border-radius: 0.75rem;
-  margin: 1.5rem 0;
-  overflow-x: auto;
-  font-size: 0.875rem;
-  line-height: 1.6;
-
-  pre {
-    margin: 0;
-    padding: 0;
-    background: none;
-    border-radius: 0;
-  }
-
-  code {
-    font-family: 'JetBrains Mono', 'Fira Code', Consolas, monospace;
-    background: none;
-    padding: 0;
-  }
-}
-
-// Light mode colors (default)
-:root {
-  --hl-comment: #6a737d;
-  --hl-keyword: #d73a49;
-  --hl-string: #032f62;
-  --hl-number: #005cc5;
-  --hl-function: #6f42c1;
-  --hl-class: #22863a;
-  --hl-variable: #e36209;
-  --hl-operator: #d73a49;
-  --hl-punctuation: #24292e;
-  --hl-text: #24292e;
-}
-
-// Dark mode colors
-[data-theme="dark"] {
-  --hl-comment: #8b949e;
-  --hl-keyword: #ff7b72;
-  --hl-string: #a5d6ff;
-  --hl-number: #79c0ff;
-  --hl-function: #d2a8ff;
-  --hl-class: #7ee787;
-  --hl-variable: #ffa657;
-  --hl-operator: #ff7b72;
-  --hl-punctuation: #c9d1d9;
-  --hl-text: #c9d1d9;
-}
-
-// Syntax highlighting classes
-.highlight {
-  color: var(--hl-text);
-
-  .c, .c1, .cm, .cs { color: var(--hl-comment); font-style: italic; } // Comments
-  .cp { color: var(--hl-keyword); } // Comment.Preproc
-
-  .k, .kc, .kd, .kn, .kp, .kr, .kt { color: var(--hl-keyword); } // Keywords
-  .o, .ow { color: var(--hl-operator); } // Operators
-
-  .s, .s1, .s2, .sb, .sc, .sd, .se, .sh, .si, .sx, .sr, .ss { color: var(--hl-string); } // Strings
-
-  .m, .mf, .mh, .mi, .mo, .il { color: var(--hl-number); } // Numbers
-
-  .nf, .fm { color: var(--hl-function); } // Functions
-  .nc, .nn { color: var(--hl-class); } // Classes
-  .nv, .vi, .vg, .vc { color: var(--hl-variable); } // Variables
-
-  .na { color: var(--hl-function); } // Name.Attribute
-  .nb { color: var(--hl-class); } // Name.Builtin
-  .nd { color: var(--hl-function); } // Name.Decorator
-  .ne { color: var(--hl-class); } // Name.Exception
-  .ni { color: var(--hl-variable); } // Name.Entity
-  .no { color: var(--hl-number); } // Name.Constant
-  .nt { color: var(--hl-keyword); } // Name.Tag
-  .nx { color: var(--hl-text); } // Name.Other
-
-  .p { color: var(--hl-punctuation); } // Punctuation
-  .w { color: var(--hl-text); } // Whitespace
-
-  .err { color: var(--hl-keyword); background: transparent; } // Error
-  .g, .gd, .ge, .gh, .gi, .go, .gp, .gs, .gu, .gt, .gr { color: var(--hl-text); } // Generic
-
-  .gd { color: #f85149; } // Generic.Deleted
-  .gi { color: #7ee787; } // Generic.Inserted
-  .ge { font-style: italic; } // Generic.Emph
-  .gs { font-weight: bold; } // Generic.Strong
-}
+// This file is intentionally left empty to disable Rouge syntax highlighting styles.
+// We are using Highlight.js instead.
